# scrapy

./: Makefile  pyproject.toml
chocolatescraper/: scrapy.cfg
chocolatescraper/chocolatescraper/: settings.py
chocolatescraper/chocolatescraper/spiders/: chocolatespider.py
crawls/vinted/: middlewares.py  pipelines.py  settings.py
vinted/: scrapy.cfg
vinted/vinted/: items.py  settings.py
vinted/vinted/spiders/: vint.py
web/scraper/scraper/: settings.py  urls.py
web/scraper/scraper/vinted/: apps.py  models.py
web/scraper/scraper/vinted/migrations/: 0001_initial.py  0002_alter_brand_vinted_id_and_more.py  0003_alter_brand_items_amount_and_more.py
